Added tires endpoint
